# thesis-results-analysis

./: pyproject.toml
results_analysis/: analysis.py
results_analysis/data/: evaluation_results.csv  evaluation_results_filtered.csv
