[tool.poetry]
name = "results-analysis"
version = "0.1.0"
description = ""
authors = ["Adam Grygar <adam.grygar@kiwi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
